--- a/Hotel-bookings-from-Trivago-Analysis.ipynb
+++ b/Hotel-bookings-from-Trivago-Analysis.ipynb
@@ -2145,7 +2145,7 @@
       },
       "source": [
         "### Conclusion\n",
-        "Thank you all for viewing this Analysis project. I've just summarized a a somewhat-large dataset (~16 MB) into a few paragraphs!\n",
+        "Thank you all for viewing this Analysis project. I've just summarized a somewhat-large dataset (~16 MB) into a few paragraphs!\n",
         "\n",
         "Emini Offutt, High School Junior\n",
         "\n",
